cabal-version:      3.4
name:               rel8-postgis
version:            0.1.0.0
synopsis:           Unofficial Type-safe PostGIS bindings for Rel8
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
category:           Database, Geography
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:   src
    default-language: GHC2021
    import:           warnings

    exposed-modules:  Rel8.PostGIS

    other-modules:    Rel8.PostGIS.Types
                      Rel8.PostGIS.Functions
                      Rel8.PostGIS.Instances

    build-depends:    base >=4.16 && <5
                      , rel8 >= 1.4
                      , hasql >= 1.6
                      , postgis >= 0.1
                      , text
                      , bytestring
                      , scientific

    default-extensions:
        OverloadedStrings
        TypeFamilies


test-suite rel8-postgis-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.16 && < 5
        , rel8-postgis
