cabal-version:      3.16
name:               rel8-postgis
version:            0.1.0.0
synopsis:           Unofficial Type-safe PostGIS bindings for Rel8
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
category:           Database, Geography
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:   src
    default-language: GHC2021

    exposed-modules:  Rel8.PostGIS

    other-modules:    Rel8.PostGIS.Codec
                      Rel8.PostGIS.Types
                      Rel8.PostGIS.Functions
                      Rel8.PostGIS.Instances

    build-depends:      base >=4.20 && <5
                      , rel8
                      , hasql
                      , text
                      , bytestring
                      , scientific
                      , binary
                      , cereal

    default-extensions:
        OverloadedStrings
        TypeFamilies
        PackageImports


test-suite rel8-postgis-test
    import:             warnings
    default-language:   GHC2021
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    other-modules:      Fixtures
                      , TestInfrastructure

    build-depends:
        base >= 4.20 && < 5
        , rel8-postgis
        , rel8
        , hasql
        , bytestring
        , text
